dbent-derive/tests/ui/entity_label_no_struct.rs
use dbent::prelude::*;

#[derive(Label)]
enum Test {
    Id(Key<Int>),
    #[label] Data(String),
}

fn main() {}
